[Bug #161204596 finishes] Improved colour contrast

--- a/style/main.css
+++ b/style/main.css
@@ -83,7 +83,8 @@
 }
 
 .active_link{
-    background: #614DBF;
+    background:#614DBF;
+    color: #dddddd;
 }
 
 .main{
@@ -111,6 +112,7 @@
 
 .table_head{
     background: #4773B9;
+    color: #dddddd;
 }
 
 .colunm{
