--- a/style/style.css
+++ b/style/style.css
@@ -25,6 +25,7 @@
 .input-button{
     border: 1px solid #19086E;
     background: #614DBF;
+    color: #dddddd;
 }
 
 .input,
